--- a/scss/_cliente.scss
+++ b/scss/_cliente.scss
@@ -182,8 +182,8 @@ $areasgridConsulta:(
     }
 
     #img1c, #img2c, #img3c, #if1c, #if2c, #if3c {
-        width: 80%; /* Ajusta el ancho al 80% del contenedor */
-        max-width: 250px; /* Tamaño máximo para imágenes en pantallas móviles */
+        width: 80%;
+        max-width: 250px;
         height: auto;
     }
 
