--- a/css/main.css
+++ b/css/main.css
@@ -550,13 +550,13 @@ nav {
 /*-----RESPONSIVE-----*/
 /*PC De La Escuela*/
 @media screen and (min-width: 1300px) and (max-width: 1400px) {
-  #tieAut__Main h4 {
+  #tieAut__Main div[id*="Datos"] h4 {
     font-size: 30px; }
-  #tieAut__Main p {
+  #tieAut__Main div[id*="Datos"] p {
     font-size: 15px; } }
 
 /*TABLET*/
-@media screen and (min-width: 768px) and (max-width: 1023px) {
+@media screen and (min-width: 421px) and (max-width: 1023px) {
   #tieAut__Main img {
     outline: 3px solid black; }
   #tieAut__Main #marcas {
@@ -584,7 +584,7 @@ nav {
       height: 140px; } }
 
 /*CELULAR*/
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 480px) {
   #tieAut__Main img {
     outline: 3px solid black; }
   #tieAut__Main #marcas {
