--- a/css/main.css
+++ b/css/main.css
@@ -653,9 +653,11 @@ nav {
   grid-template-areas: 'h1 h1 h1' 'img1 img2 img3' 'm1 t1 r1' 'd1 d2 d3' 'h2 h2 h2' 'i1 i2 i3' 'img img ct';
   justify-items: center;
   align-items: center;
-  gap: 20px; }
+  gap: 20px;
+  width: 100%;
+  padding: 20px; }
 
-#contenedorcliente1 {
+#contenedor_titulo_consulta {
   color: white;
   background-color: black;
   width: 100%;
@@ -721,17 +723,17 @@ nav {
   justify-content: center;
   font-size: 40px; }
 
-#if1c {
+#info1consulta {
   grid-area: i1;
   width: 500px;
   height: 300px; }
 
-#if2c {
+#info2consulta {
   width: 500px;
   height: 300px;
   grid-area: i2; }
 
-#if3c {
+#info3consulta {
   width: 500px;
   height: 300px;
   grid-area: i3; }
@@ -743,15 +745,12 @@ nav {
 
 #img_laptop {
   width: 100%;
-  height: 700px;
-  margin: 10px;
-  padding: 10px; }
+  height: 700px; }
 
 #consulta {
   grid-area: ct;
   width: 100%;
   height: auto;
-  padding: 20px;
   border-radius: 10px;
   background-color: white;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -776,10 +775,12 @@ nav {
   background-color: #0056b3; }
 
 @media (max-width: 768px) {
-  #mainC {
+  #mainConsulta {
     grid-template-columns: 1fr;
-    grid-template-areas: 'h1' 'img1' 'm1' 'img2' 't1' 'img3' 'r1' 'h2' 'i1' 'i2' 'i3' 'img' 'ct'; }
-  #img1c, #img2c, #img3c, #if1c, #if2c, #if3c {
+    grid-template-areas: 'h1' 'img1' 'm1' 'img2' 't1' 'img3' 'r1' 'h2' 'i1' 'i2' 'i3' 'img' 'ct';
+    padding: 10px;
+    gap: 15px; }
+  #img1c, #img2c, #img3c, #info1consulta, #info2consulta, #info3consulta {
     width: 80%;
     max-width: 250px;
     height: auto; }
@@ -807,11 +808,10 @@ nav {
   to {
     transform: scale(1); } }
 
-/* Aplicar animaciones */
 #mainConsulta {
   animation: fadeIn 1s ease-in-out; }
 
-#contenedorcliente1, #h2c {
+#contenedor_titulo_consulta, #h2c {
   animation: fadeIn 1s ease-in-out; }
 
 #consulta {
@@ -820,18 +820,15 @@ nav {
 #img1c, #img2c, #img3c, #if1c, #if2c, #if3c, #contenedor_imagen_consulta_laptop {
   animation: fadeIn 1.2s ease-in-out; }
 
-/* Efecto hover adicional */
 #consulta:hover {
   transform: scale(1.05);
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); }
 
-/* Responsivo: Entre 1300px y 1400px */
 @media (min-width: 1300px) and (max-width: 1400px) {
   #mainConsulta {
     grid-template-columns: repeat(3, 1fr);
-    gap: 15px;
-    /* Ajusta la separación */ }
-  #img1c, #img2c, #img3c, #if1c, #if2c, #if3c {
+    gap: 15px; }
+  #img1c, #img2c, #img3c, #info1consulta, #info2consulta, #info3consulta {
     width: 280px;
     height: auto; }
   #p1c, #p2c, #p3c {
